setup of navbar and introduction

--- a/index.html
+++ b/index.html
@@ -8,12 +8,33 @@
     <title>Destiny 2 Beginner's Guide</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul></ul>
+    <header id="main-header">
+        <img id="header-logo" src="images/Destiny_2_logo.png">
+        <h1>Beginner's Guide</h1>
+        <nav id="navbar">
+            <ul id="navlist">
+                <li><a href="#introduction-section" class="navlink">Introduction</a></li>
+                <li><a href="#class-selection" class="navlink">Select a Class</a></li>
+                <li><a href="#armor" class="navlink">Armor stats</a></li>
+                <li><a href="#weapons" class="navlink">Weapon rolls</a></li>
+            </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section id="introduction-section">
+            <h1>Welcome to the Destiny 2 Beginner's Guide</h1>
+            <P>Hi there,</P>
+            <p>This page is designed to be your one stop shop for all things destiny.</p>
+            <P>Throughout this guide we will cover the many aspects of destiny, from picking your first class to in depth build advice and eventually advanced PvE endgame and PvP advice.
+                Feel free to save to your bookmarks for future use.
+            </P>
+        </section>
+        <section id="class-selection">
+            <h1>Which class should I play?</h1>
+        </section>
+        <section id="armor"></section>
+        <section id="weapons"></section>
+    </main>
     <footer></footer>
 </body>
 </html>
