--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>Destiny 2 Beginner's Guide</title>
 </head>
 <body>
-    <header id="main-header">
-        <img id="header-logo" src="images/Destiny_2_logo.png">
+    <header id="mainHeader">
+        <img id="headerLogo" src="images/Destiny_2_logo.png">
         <h1>Beginner's Guide</h1>
         <nav id="navbar">
             <ul id="navlist">
-                <li><a href="#introduction-section" class="navlink">Introduction</a></li>
-                <li><a href="#class-selection" class="navlink">Select a Class</a></li>
+                <li><a href="#introduction" class="navlink">Introduction</a></li>
+                <li><a href="#classSelection" class="navlink">Select a Class</a></li>
                 <li><a href="#armor" class="navlink">Armor stats</a></li>
                 <li><a href="#weapons" class="navlink">Weapon rolls</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="introduction-section">
+        <section id="introduction">
             <h1>Welcome to the Destiny 2 Beginner's Guide</h1>
             <P>Hi there,</P>
             <p>This page is designed to be your one stop shop for all things destiny.</p>
@@ -29,8 +29,24 @@
                 Feel free to save to your bookmarks for future use.
             </P>
         </section>
-        <section id="class-selection">
+        <section id="classSelection">
             <h1>Which class should I play?</h1>
+            <div id="containerForClasses">
+                <div class="classContainer">
+                    <img>
+                    <p>Hunter</p>
+                <div class="classContainer">
+                    <img>
+                    <p>Warlock</p>
+                </div>
+                <div class="classContainer">
+                    <img>
+                    <p>Titan</p>
+                </div>
+            </div>
+            <section id="classHunter"></section>
+            <section id="classWarlock"></section>
+            <section id="classTitan"></section>
         </section>
         <section id="armor"></section>
         <section id="weapons"></section>
