add images and style class section

--- a/index.html
+++ b/index.html
@@ -23,24 +23,27 @@
     <main>
         <section id="introduction">
             <h1>Welcome to the Destiny 2 Beginner's Guide</h1>
-            <P>Hi there,</P>
-            <p>This page is designed to be your one stop shop for all things destiny.</p>
-            <P>Throughout this guide we will cover the many aspects of destiny, from picking your first class to in depth build advice and eventually advanced PvE endgame and PvP advice.
+            <div class="textContainer">
+                <P>Hi there,</P>
+                <p>This page is designed to be your one stop shop for all things destiny.</p>
+                <P>Throughout this guide we will cover the many aspects of destiny, from picking your first class to in depth build advice and eventually advanced PvE endgame and PvP advice.
                 Feel free to save to your bookmarks for future use.
-            </P>
+                </P>
+            </div>
         </section>
         <section id="classSelection">
             <h1>Which class should I play?</h1>
             <div id="containerForClasses">
                 <div class="classContainer">
-                    <img>
-                    <p>Hunter</p>
-                <div class="classContainer">
-                    <img>
+                    <img src="./images/Warlock.png">
                     <p>Warlock</p>
                 </div>
                 <div class="classContainer">
-                    <img>
+                    <img src="./images/Hunter.png">
+                    <p>Hunter</p>
+                </div>    
+                <div class="classContainer">
+                    <img src="./images/Titan.png">
                     <p>Titan</p>
                 </div>
             </div>
