add Icons and start detailed class section

--- a/index.html
+++ b/index.html
@@ -36,20 +36,43 @@
             <div id="containerForClasses">
                 <div class="classContainer">
                     <img src="./images/Warlock.png">
-                    <p>Warlock</p>
+                    <h2>Warlock</h2>
+                    <p>Warlocks are floofy bois blah blah.....</p>
                 </div>
                 <div class="classContainer">
                     <img src="./images/Hunter.png">
-                    <p>Hunter</p>
+                    <h2>Hunter</h2>
+                    <p>filler text</p>
                 </div>    
                 <div class="classContainer">
                     <img src="./images/Titan.png">
-                    <p>Titan</p>
+                    <h2>Titan</h2>
+                    <p>filler text lol</p>
                 </div>
             </div>
-            <section id="classHunter"></section>
-            <section id="classWarlock"></section>
-            <section id="classTitan"></section>
+            <section id="classWarlock">
+                <img src="./images/voidWarlock.jpg" class="classImg">
+                <div class="jumps">
+                    <div class="abilityContainer"></div>
+                    <div class="abilityContainer"></div>
+                    <div class="abilityContainer"></div>
+                    <div class="abilityContainer"></div>
+                </div>
+                <div class="classAbility"></div>
+                <div class="subClasses"></div>
+            </section>
+            <section id="classHunter">
+                <img src="./images/solarHunter.jpg" class="classImg">
+                <div class="jumps"></div>
+                <div class="classAbility"></div>
+                <div class="subClasses"></div>
+            </section>
+              <section id="classTitan">
+                <img src="./images/arcTitan.png" class="classImg">
+                <div class="jumps"></div>
+                <div class="classAbility"></div>
+                <div class="subClasses"></div>
+            </section>
         </section>
         <section id="armor"></section>
         <section id="weapons"></section>
